solved for corner 0